--- a/views/admin/kelas/addkelas3B.ejs
+++ b/views/admin/kelas/addkelas3B.ejs
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="add-kelasA"
+  id="add-kelasB"
   tabindex="-1"
   role="dialog"
   aria-labelledby="exampleModalLabel"
@@ -10,7 +10,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add Siswa Kelas A</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Add Siswa Kelas B</h5>
         <button
           type="button"
           class="close"
