--- a/views/admin/raport/dataraport.ejs
+++ b/views/admin/raport/dataraport.ejs
@@ -2,7 +2,7 @@
   <!-- Page Heading -->
   <div class="row">
     <div class="col-10">
-      <h1 class="h3 mb-2 text-gray-800">Kelas 3 A</h1>
+      <h1 class="h3 mb-2 text-gray-800">Raport Siswa</h1>
       <p class="mb-4"></p>
     </div>
   </div>
@@ -10,18 +10,6 @@
   <!-- DataTales Example -->
   <div class="card shadow mb-4">
     <div class="card-header py-3">
-      <div class="row">
-        <div class="col-10">Wali Kelas : Raihan Syaputra</div>
-        <div class="col-2">
-          <a
-            type="button"
-            data-toggle="modal"
-            data-target="#add-kelasA"
-            class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
-            ><i class="fas fa-plus fa-sm text-white-50"></i> Add</a
-          >
-        </div>
-      </div>
       <!-- <h6 class="m-0 font-weight-bold text-primary">Data</h6> -->
     </div>
     <div class="card-body">
@@ -35,11 +23,14 @@
           <thead>
             <tr>
               <th>No</th>
+              <th>Nis</th>
               <th>Nama</th>
+              <th>Kelas</th>
+              <th>Tempat Lahir</th>
+              <th>Tanggal Lahir</th>
               <th>Matematika</th>
               <th>Bahasa Indonesia</th>
               <th>Bahasa Inggris</th>
-              <th>Action</th>
             </tr>
           </thead>
           <tbody></tbody>
