--- a/views/admin/raport/viewraport.ejs
+++ b/views/admin/raport/viewraport.ejs
@@ -23,11 +23,7 @@
 
           <!-- Content Row -->
         </div>
-        <%- include('./kelas3A.ejs') %>
-        <!--  -->
-        <%- include('./kelas3B.ejs') %>
-        <!--  -->
-        <%- include('./kelas3C.ejs') %>
+        <%- include('./dataraport.ejs') %>
         <!--  -->
 
         <!-- /.container-fluid -->
@@ -35,7 +31,6 @@
       <!-- End of Main Content -->
 
       <!-- Footer -->
-      <%- include('./addkelas3A.ejs') %>
       <!--  -->
       <%- include('../../partials/footer.ejs') %>
       <!-- End of Footer -->
