--- a/views/admin/kelas/kelas3C.ejs
+++ b/views/admin/kelas/kelas3C.ejs
@@ -2,7 +2,7 @@
   <!-- Page Heading -->
   <div class="row">
     <div class="col-10">
-      <h1 class="h3 mb-2 text-gray-800">Kelas 3 A</h1>
+      <h1 class="h3 mb-2 text-gray-800">Kelas 3 C</h1>
       <p class="mb-4"></p>
     </div>
   </div>
@@ -11,12 +11,12 @@
   <div class="card shadow mb-4">
     <div class="card-header py-3">
       <div class="row">
-        <div class="col-10">Wali Kelas : Raihan Syaputra</div>
+        <div class="col-10">Wali Kelas : Humairani</div>
         <div class="col-2">
           <a
             type="button"
             data-toggle="modal"
-            data-target="#add-kelasA"
+            data-target="#add-kelasC"
             class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
             ><i class="fas fa-plus fa-sm text-white-50"></i> Add</a
           >
