--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -170,7 +170,7 @@
         aria-expanded="false"
       >
         <span class="mr-2 d-none d-lg-inline text-gray-600 small">User</span>
-        <img class="img-profile rounded-circle" src="img/undraw_profile.svg" />
+        <img class="img-profile rounded-circle" />
       </a>
       <!-- Dropdown - User Information -->
       <div
@@ -179,7 +179,7 @@
       >
         <a
           class="dropdown-item"
-          href="#"
+          href="/admin/login"
           data-toggle="modal"
           data-target="#logoutModal"
         >
@@ -217,14 +217,12 @@
           <span aria-hidden="true">×</span>
         </button>
       </div>
-      <div class="modal-body">
-        Select "Logout" below if you are ready to end your current session.
-      </div>
+      <div class="modal-body">Apakah kamu ingin keluar ?</div>
       <div class="modal-footer">
         <button class="btn btn-secondary" type="button" data-dismiss="modal">
           Cancel
         </button>
-        <a class="btn btn-primary" href="login.html">Logout</a>
+        <a class="btn btn-primary" href="/admin/login">Logout</a>
       </div>
     </div>
   </div>
