--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -116,35 +116,10 @@
       </div>
     </div>
   </li>
-  <li class="nav-item">
-    <a
-      class="nav-link collapsed"
-      href="#"
-      data-toggle="collapse"
-      data-target="#collapsePages"
-      aria-expanded="true"
-      aria-controls="collapsePages"
-    >
-      <i class="fas fa-fw fa-folder"></i>
-      <span>Mata Pelajaran</span>
-    </a>
-    <div
-      id="collapsePages"
-      class="collapse"
-      aria-labelledby="headingPages"
-      data-parent="#accordionSidebar"
-    >
-      <div class="bg-white py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Login Screens:</h6>
-        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-        <a class="collapse-item" href="blank.html">Blank Page</a>
-      </div>
-    </div>
-  </li>
 
   <!-- Nav Item - Charts -->
   <li class="nav-item">
-    <a class="nav-link" href="charts.html">
+    <a class="nav-link" href="/admin/raport">
       <i class="fas fa-fw fa-chart-area"></i>
       <span>Raport</span></a
     >
